# kindle-to-anki

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
