[tool.poetry]
name = "kindle-to-anki"
version = "0.1.0"
description = "A Python application that converts Kindle Vocabulary Builder word lists into customizable Anki flashcards for effortless vocabulary learning."
authors = ["Rostislav L."]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
